# lang_chain_lang_graph_learning

./: README.md  agent_deep_dive.py  configuraable_model.py  pyproject.toml
archive/: agent_deep_dive.py  langchain-quickstart.ipynb  langgraph_intro.ipynb  model_deep_dive.ipynb  models.py
archive/tools/: data.json
memory/: memory_via_middleware.py
src/: __init__.py  models.py
src/agents/: simple_agent.py
src/configs/: __init__.py  model_configs.py
src/front_end/: __init__.py  interactive_console.py
src/guardrails/: __init__.py  denied_service_abbusive.py
src/prompts/: __init__.py  abusive_checker_prompt.py  system_prompts.py
src/states/: mood.py
src/tools/: __init__.py  weather.py
tools/: dog_info.py
