[project]
name = "lang-chain-lang-graph"
version = "0.1.0"
description = ""
authors = [
    { name = "Deep Adhikary", email = "deep.adhikary@genomicsengland.co.uk" },
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = ["langchain (>=1.2.0,<2.0.0)", "langchain-aws (>=1.1.0,<2.0.0)", "langgraph (>=1.0.5,<2.0.0)", "requests (>=2.32.5,<3.0.0)", "rich (>=14.2.0,<15.0.0)"]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
